[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Options_menu.gd" type="Script" id=1]
[ext_resource path="res://images/OptionsMenu.jpg" type="Texture" id=2]


[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 516.865, 304.566 )
scale = Vector2( 0.53063, 0.555602 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 32.0
margin_top = 430.0
margin_right = 370.0
margin_bottom = 577.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Main Menu"
flat = false
align = 1

[node name="IncreaseBright" type="Button" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 24.0
margin_top = 19.0
margin_right = 363.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Increase Brightness"
flat = false
align = 1

[node name="DecreaseBright" type="Button" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 17.0
margin_top = 201.0
margin_right = 390.0
margin_bottom = 361.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Decrease Brightness"
flat = false
align = 1

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="IncreaseBright" to="." method="_on_IncreaseBright_pressed"]

[connection signal="pressed" from="DecreaseBright" to="." method="_on_DecreaseBright_pressed"]


